--- a/res/layout/call_button_fragment.xml
+++ b/res/layout/call_button_fragment.xml
@@ -178,6 +178,14 @@
                     android:contentDescription="@string/onscreenBlacklistText"
                 />
 
+        <com.android.incallui.CallRecordingButton
+                     android:id="@+id/recordButton"
+                     style="@style/InCallButton"
+                     android:src="@drawable/ic_record_holo_dark"
+                     android:contentDescription="@string/onscreenRecordText"
+                     android:visibility="gone"
+                     />
+
         <!-- Separator between 5th (or 6th) button and right padding -->
         <View style="@style/VerticalSeparator" />
 
