--- a/res/layout/call_button_fragment.xml
+++ b/res/layout/call_button_fragment.xml
@@ -178,6 +178,10 @@
                     android:contentDescription="@string/onscreenBlacklistText"
                 />
 
+        <View android:id="@+id/recordSpacer"
+              style="@style/VerticalSeparator"
+              android:visibility="gone" />
+
         <com.android.incallui.CallRecordingButton
                      android:id="@+id/recordButton"
                      style="@style/InCallButton"
