Opt in in call volume fix for ha3g device and like
Change-Id: I43bf46a17acf7b2e0794c5051af01baa071c78ca

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -16,4 +16,6 @@
 -->
 <resources>
     <bool name="config_disable_audio_boost">true</bool>
+
+    <bool name="config_uses_yamaha_sound">false</bool>
 </resources>
