--- a/res/layout/call_card_fragment.xml
+++ b/res/layout/call_card_fragment.xml
@@ -78,6 +78,35 @@
             android:background="@android:color/white"
             android:src="@drawable/img_no_image_automirrored" />
 
+        <!-- Call recorder info -->
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true">
+
+            <TextView android:id="@+id/recordingIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="24dp"
+                android:paddingBottom="119dp"
+                android:drawableRight="@drawable/ic_recording_indicator"
+                android:visibility="invisible" />
+
+            <TextView android:id="@+id/recordingTime"
+                android:text="@string/recording_time_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/recordingIcon"
+                android:layout_marginStart="5dp"
+                android:paddingBottom="120dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/incall_call_banner_text_color"
+                android:visibility="invisible"
+                android:singleLine="true"/>
+        </RelativeLayout>
+
     </FrameLayout>
 
     <fragment android:name="com.android.incallui.VideoCallFragment"
